# review_agents_java

rag_java_claude/: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  config.yaml  pyproject.toml  youken.md
rag_java_claude/examples/: qa_sample.py
rag_java_claude/spec/: architecture.md  cli.md  components.md  prompts.md  schemas.md  test-plan.md
rag_java_claude/src/java_qa_agent/: __init__.py  chat_session.py  cli.py  config.py  context_builder.py  indexer.py  logger.py  project_manager.py  retriever.py
rag_java_claude/src/java_qa_agent/backends/: __init__.py  ollama_embed.py  ollama_llm.py
rag_java_claude/src/java_qa_agent/schemas/: __init__.py  models.py
rag_java_claude/tests/fixtures/sample_java/: Calculator.java  UserService.java
rag_java_claude/tests/integration/: test_rag_chain.py
rag_java_claude/tests/unit/: test_chat_session.py  test_chunker.py  test_config.py  test_context_builder.py  test_error_handling.py  test_indexer.py  test_project_manager.py  test_retriever.py  test_schemas.py
rag_java_gemini/: .env.example  .gitignore  GEMINI.md  Makefile  README.md  config.yaml  pyproject.toml  youken.md
rag_java_gemini/spec/: architecture.md  cli.md  components.md  prompts.md  schemas.md  test-plan.md
rag_java_gemini/src/java_qa_agent/: __init__.py  chat_session.py  cli.py  config.py  context_builder.py  indexer.py  logger.py  project_manager.py  retriever.py
rag_java_gemini/src/java_qa_agent/backends/: ollama_embed.py  ollama_llm.py
rag_java_gemini/src/java_qa_agent/schemas/: models.py
rag_java_gemini/tests/unit/: test_backends_ollama.py  test_chat_session.py  test_config.py  test_context_builder.py  test_indexer_chunker.py  test_indexer_robust.py  test_indexer_scanner.py  test_project_manager.py  test_retriever.py
review_agents_claude/java-review-agent/: .env.example  .gitignore  Makefile  README.md  pyproject.toml
review_agents_claude/java-review-agent/src/java_review_agent/: __init__.py  chat.py  config.py  graph.py  main.py  scanner.py  server.py  state.py
review_agents_claude/java-review-agent/src/java_review_agent/agents/: __init__.py  aggregator.py  base.py  bug_detector.py  design_critic.py  efficiency_analyzer.py  file_report_generator.py  preprocessor.py  security_scanner.py  style_reviewer.py  summary_generator.py
review_agents_claude/java-review-agent/src/java_review_agent/backends/: __init__.py  ollama.py
review_agents_claude/java-review-agent/src/java_review_agent/schemas/: __init__.py  models.py
review_agents_claude/java-review-agent/static/: index.html
review_agents_claude/java-review-agent/tests/: conftest.py
review_agents_claude/java-review-agent/tests/fixtures/sample_java/: BuggyClass.java  LargeClass.java  SecurityVulnerable.java  SimpleClass.java
review_agents_claude/java-review-agent/tests/integration/: test_graph.py  test_ollama_connection.py
review_agents_claude/java-review-agent/tests/unit/: test_agents.py  test_aggregator.py  test_config.py  test_preprocessor.py  test_scanner.py  test_schemas.py
review_agents_gemini/: .gitignore  GEMINI.md  Makefile  README.md  config.yaml  pyproject.toml  youken.md
review_agents_gemini/spec/: agents.md  architecture.md  prompts.md  schemas.md  test-plan.md  web_ui.md
review_agents_gemini/src/java_review_agent/: config.py  graph.py  main.py  scanner.py  state.py  ui.py
review_agents_gemini/src/java_review_agent/agents/: aggregator.py  base.py  bug_detector.py  design_critic.py  efficiency_analyzer.py  file_report_generator.py  preprocessor.py  security_scanner.py  style_reviewer.py
review_agents_gemini/src/java_review_agent/backends/: ollama.py
review_agents_gemini/src/java_review_agent/schemas/: models.py
review_agents_gemini/tests/unit/: test_aggregator.py  test_main.py  test_ollama_backend.py  test_preprocessor.py  test_scanner.py  test_schemas.py
(+9 files in other folders)
